--- a/css/main.css
+++ b/css/main.css
@@ -128,14 +128,6 @@ body {
 .slider__button {
   text-align: right;
   position: relative; }
-  .slider__button:after {
-    content: "";
-    position: absolute;
-    top: 75px;
-    left: 115px;
-    width: 185px;
-    height: 24px;
-    background-image: url("../img/shadow_btn.png"); }
   .slider__button .btn_header {
     padding: 10px 35px;
     border: 1px solid #6e9ad8;
@@ -315,6 +307,7 @@ body {
   line-height: 1.15rem;
   color: #f5f6fa;
   padding: 9px 24px;
+  margin-bottom: 10px;
   margin-top: 30px;
   cursor: pointer;
   border: none;
